--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#_home"><img class="header__logo" src="images/logo-img.svg" alt="Лого" /></a>
                 <ul class="header__nav">
                     <li class="header__nav-item"><a class="header__nav-link" href="#_home"><i class="fas fa-home"></i></a></li>
-                    <li class="header__nav-item"><a class="header__nav-link" href="#_start">Отборочный этап</a></li>
+                    <li class="header__nav-item"><a class="header__nav-link" href="#_persons">Отборочный этап</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_final">Финальный этап</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_history">История</a></li>
                     <li class="header__nav-item"><a class="header__nav-link" href="#_contacts">Информация</a></li>
@@ -42,7 +42,7 @@
                     <div class="menu-popup">
                         <ul>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_home"><i class="fas fa-home"></i></a></li>
-                            <li class="header__nav-item"><a class="header__nav-link" href="#_start">Отборочный этап</a></li>
+                            <li class="header__nav-item"><a class="header__nav-link" href="#_persons">Отборочный этап</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_final">Финальный этап</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_history">История</a></li>
                             <li class="header__nav-item"><a class="header__nav-link" href="#_contacts">Информация</a></li>
@@ -73,7 +73,7 @@
 
         <main id="info" class="info wrapper__info">
             
-            <section id="_start" class="info__block">
+            <!--<section id="_start" class="info__block">
                 <img class="info__block-image" src="./images/start.svg" alt="Старт" /> 
                 <div class="info__block-content">
                     <h2 class="info__block-title">Отборочный этап<span class="info__block-bage">онлайн</span></h2>
@@ -93,6 +93,57 @@
                             </p>
                             <a class="info__button" href="http://b68448.vr.mirapolis.ru/mira/s/LUQc0s" target="_blank">Стать зрителем</a>
                         </div>
+                    </div>
+                </div>
+            </section>-->
+
+            <section id="_persons" class="persons">
+                <h2 class="persons__block-title">Победители отборочного этапа</h2>
+                <div class="persons__block">
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/andronova.png" alt="Андронова">
+                        <h3 class="persons__title">Андронова Анна Владимировна</h3>
+                        <p class="persons__subtitle">ФКУ "Центр экстренной психологической помощи МЧС России"</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/astahova.png" alt="Астахова">
+                        <h3 class="persons__title">Астахова Екатерина Владимировна</h3>
+                        <p class="persons__subtitle">ГБУ «Московская служба психологической помощи населению»</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/belousova.png" alt="Белоусова">
+                        <h3 class="persons__title">Белоусова Алина Игоревна</h3>
+                        <p class="persons__subtitle">ГБУЗ ПКБ №4 им. П.Б. Ганнушкина</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/bogdanov.png" alt="Богданов">
+                        <h3 class="persons__title">Богданов Михаил Александрович</h3>
+                        <p class="persons__subtitle">ГБУЗ Центр патологии речи и нейрореабилитации</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/glushach.png" alt="Глушач">
+                        <h3 class="persons__title">Глушач Жанна Алексеевна</h3>
+                        <p class="persons__subtitle">ГБУ Центр поддержки семьи и детства «Зеленоград»</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/ivenskaya.png" alt="Ивенская">
+                        <h3 class="persons__title">Ивенская Александра Петровна</h3>
+                        <p class="persons__subtitle">ФКУ "Центр экстренной психологической помощи МЧС России"</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/khanikova.png" alt="Ханикова">
+                        <h3 class="persons__title">Ханикова Светлана Николаевна</h3>
+                        <p class="persons__subtitle">ГБУЗ «Московский научно-практический центр наркологии ДЗМ» Филиал № 6</p>
+                    </div>
+                    <div class="persons__item">
+                        <img class="persons__image" src="./images/persons/potapova.png" alt="Потапова">
+                        <h3 class="persons__title">Потапова Ксения Сергеевна</h3>
+                        <p class="persons__subtitle">ФКУ "Центр экстренной психологической помощи МЧС России"</p>
+                    </div>
+                    <div class="persons__item" style="margin-right: 0;">
+                        <img class="persons__image" src="./images/persons/uzkikh.png" alt="Узких">
+                        <h3 class="persons__title">Узких Валерия Вячеславовна</h3>
+                        <p class="persons__subtitle">ГБУ Психоневрологический интернат № 30</p>
                     </div>
                 </div>
             </section>
