--- a/index.html
+++ b/index.html
@@ -151,11 +151,12 @@
             <!--<hr class="info__line">-->
 
             <section id="_final" class="info__block info__block_order-back">
-                <img class="info__block-image" src="./images/final.svg" alt="Финал" /> 
+                <!--<img class="info__block-image" src="./images/final.svg" alt="Финал" /> -->
                 <div class="info__block-content">
                     <h2 class="info__block-title">Финальный этап</h2>
                     <p class="info__block-date">21 октября 2020</p>
                 </div>
+                <iframe class="info__block-video" src="https://facecast.net/v/tibayg" height="100%" allow="autoplay; fullscreen" allowfullscreen></iframe>
             </section>
 
         </main>
