--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     <h2 class="info__block-title">Победители и номинанты Конкурса профессионального мастерства "Московские мастера" по профессии «Психолог»</h2>
                     <p class="info__block-date">21 октября 2020</p>
                 </div>
+                <iframe class="info__block-video" src="https://facecast.net/v/tibayg" height="100%" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 <div>
                     <h2 style="font-weight: 500; font-size: 30px;">Победители</h2>
                     <div style="display: flex; flex-wrap: wrap; justify-content: space-evenly;">
@@ -184,9 +185,9 @@
                     </div>
                     
                         <h2 style="font-weight: 500; font-size: 30px;">Номинанты</h2>
-                        <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+                        <div style="display: flex; flex-wrap: wrap; justify-content: center;">
                             <div class="persons__item">
-                                <h3 class="persons__title persons__title_small">Номинация<br />"Мистер конгруэнтность"<br></h3>
+                                <h3 class="persons__title persons__title_small">Номинация<br />"Мистер конгруэнтность"</h3>
                                 <img class="persons__image persons__image_small" src="./images/persons/bogdanov.png" alt="Богданов">
                                 <h3 class="persons__title persons__title_small">Богданов<br /> Михаил Александрович</h3>
                                 <p class="persons__subtitle persons__subtitle_small">ГБУЗ Центр патологии речи и нейрореабилитации</p>
